--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "eslint-watch": "^2.1.14",
+    "eslint-watch": "^3.0.1",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.1",
     "nsp": "^2.6.2"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "morgan": "^1.8.1"
   }
