--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "fcc_request_header_parser_microservice",
   "version": "1.0.0",
   "description": "Free Code Camp Back-end Certification Header Parser Project",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "build": "babel server -d production --ignore test.js --plugins transform-remove-console",
     "lint": "esw server --color",
     "lint:watch": "npm run lint -- --watch",
-    "serve": "SET NODE_ENV=production & node production/app.js",
+    "serve": "SET NODE_ENV=production & node production/index.js",
     "security-check": "nsp check",
     "prestart": "babel-node buildScripts/startMessage.js server/**/*.js",
     "start": "npm-run-all --parallel security-check test:watch lint:watch",
