--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-watch": "^2.1.14",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.1",
-    "nsp": "^2.6.2",
-    "open": "0.0.5"
+    "nsp": "^2.6.2"
   },
   "dependencies": {
     "express": "^4.14.1",
-    "express-useragent": "^1.0.7",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "platform": "^1.3.3"
   }
 }
